--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "jest": "^29.4.1",
+    "node-mocks-http": "^1.12.1",
     "postcss": "^8.4.18",
     "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4",
+    "test-jest": "^1.0.1",
     "typescript": "4.9.4"
   }
 }
