--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "axios": "^1.3.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
